vpn 增加删除非激活用户按钮、清理半年前日志按钮， vpn 导航高亮

--- a/vpn/templates/add.html
+++ b/vpn/templates/add.html
@@ -62,4 +62,9 @@
 {% endblock %}
 
 {% block script %}
+    <script>
+        window.onload = function () {
+            $("#nav_vpn_list").addClass("active");// 激活列表导航栏
+        };
+    </script>
 {% endblock %}
