添加IP、虚拟机搁置 导航栏高亮；用户日志获取信息有误

--- a/vms/templates/vm_shelve_list.html
+++ b/vms/templates/vm_shelve_list.html
@@ -145,5 +145,11 @@
     <script type="text/javascript" src="{% static 'evcloud/common.js' %}"></script>
     <script type="text/javascript" src="{% static 'vms/vms_operations.js' %}"></script>
     <script type="text/javascript" src="{% static 'vms/vms_shelve_list.js' %}"></script>
+    <script>
+        window.onload = function () {
+            $("#nav_vm_list").addClass("active");// 激活列表导航栏
+        };
+
+    </script>
 {% endblock %}
 
