--- a/network/templates/vlan_add.html
+++ b/network/templates/vlan_add.html
@@ -88,5 +88,6 @@
 {% block script %}
     <script type="text/javascript" src="{% static 'network/jquery.form.js' %}"></script>
     <script type="text/javascript" src="{% static 'network/vlan_add.js' %}"></script>
+    <script type="text/javascript" src="{% static 'network/vlan_list.js' %}"></script>
 {% endblock %}
 
