版本接口号前加v, 用户操作页面序号修改。

--- a/logrecord/templates/log_list.html
+++ b/logrecord/templates/log_list.html
@@ -58,7 +58,7 @@
                 <tbody>
                 {% for obj in page %}
                     <tr>
-                        <td>{{ forloop.counter }}</td>
+                        <td>{{ forloop.counter| add:page_start_index }}</td>
                         {% if obj.real_user %}
                             <td>cstcloud:{{ obj.real_user }}</td>
                         {% else %}
