站点缓存修改：增加vpn 配置文件和ca证书信息；vpn 配置文件信息字段删除；vpn文件下载接口修改；管理员IP白名单修改为访问IP白名单；增加站点参数检测命令。

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 	{% block head %}
         <script src="{% url 'javascript-catalog' %}"></script>
 	{% endblock %}
-    {% get_global_config as global_config %}
+    {% get_global_config_tag as global_config %}
 	<title> {% if global_config %} {{ global_config.siteName }} | {% endif %}{% block title %}{% endblock %}</title>
     <style>
         html{
