后台导航页面增加访问IP白名单导航

--- a/templates/app_nav.html
+++ b/templates/app_nav.html
@@ -110,6 +110,10 @@
                     class="text-danger">*&nbsp;</strong>{% translate '站点配置' %}</a>
             </td>
             <td><a class="btn btn-outline-secondary btn-sm btn-block"
+                   href="/admin/ceph/apiallowip/" role="button" target="_blank"><strong
+                    class="text-danger">*&nbsp;</strong>{% translate '访问IP白名单' %}</a>
+            </td>
+            <td><a class="btn btn-outline-secondary btn-sm btn-block"
                    href="/admin/ceph/cephcluster/" role="button" target="_blank"><strong
                     class="text-danger">*&nbsp;</strong>{% translate 'CEPH集群' %}</a>
             </td>
