--- a/logrecord/templates/log_list.html
+++ b/logrecord/templates/log_list.html
@@ -28,7 +28,9 @@
         <div class="card">
             <div class="card-header">
                 <span class="card-title"><strong><a href="{% url 'log-record:log-record-list' %}"
-                                                    class="btn btn-outline-primary">{% translate '用户操作日志' %} ({{ count }})</a></strong></span>
+                                                    class="btn btn-outline-primary active">{% translate '用户操作日志' %} ({{ count }})</a></strong></span>
+                <span class="card-title"><strong><a href="{% url 'reports:reports-list' %}"
+                                                    class="btn btn-outline-primary">{% translate '资源统计管理' %}</a></strong></span>
             </div>
             <div class="card-body">
                 <div class="row">
