--- a/image/templates/image_vm_create.html
+++ b/image/templates/image_vm_create.html
@@ -56,4 +56,7 @@
             $("#nav_image_list").addClass("active");// 激活列表导航栏
         };
     </script>
+    <script type="text/javascript" src="{% static 'evcloud/common.js' %}"></script>
+    <script type="text/javascript" src="{% static 'art-template/template-web.js' %}"></script>
+    <script type="text/javascript" src="{% static 'image/image_vm_create2.js' %}"></script>
 {% endblock %}
